aptos-move/aptos-transactional-test-harness/tests/aptos_test_harness/warnings-are-errors/call_function.exp
processed 5 tasks

task 1 'publish'. lines 4-31:
Error: warning[W09003]: unused assignment
   ┌─ TEMPFILE:15:13
   │
15 │         let x = 3;
   │             ^ Unused assignment or binding for local 'x'. Consider removing, replacing with '_', or prefixing with '_' (e.g., '_x')



task 2 'run'. lines 33-33:
Error: Failed to execute transaction. ExecutionStatus: MiscellaneousError(None)

task 3 'run'. lines 35-35:
Error: Failed to execute transaction. ExecutionStatus: MiscellaneousError(None)

task 4 'view'. lines 37-37:
[No Resource Exists]
